feat: AdminLTE v3 완전 전환 및 UI/UX 개선
- AdminLTE v3.2.0으로 완전 전환하여 모든 템플릿 현대화
- Layout 상속 구조로 코드 중복 제거 및 일관성 향상
- 고급 UI 컴포넌트 적용: Select2, DataTables, Summernote, SweetAlert2
- 동적 폼 필드 생성 및 PropertyField enum 기반 필드 매핑
- 멀티스텝 등록 폼, 드래그앤드롭 이미지 업로드 구현
- 반응형 디자인 및 접근성 향상
- PropertyService JPA 변환 및 enum 기반 하드코딩 제거
- PostgreSQL 전용 설정 및 사용자 계정 보안 강화
- 종합적인 문서화: CLAUDE.md, 설정 가이드, 리팩토링 계획

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>